--- a/css/style.css
+++ b/css/style.css
@@ -21,3 +21,14 @@
   height: 100%;
   border: 1px solid black;
 }
+
+.selettore_tipi {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100px;
+}
+select {
+  margin: 0 30px;
+}
